--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PracticalDRCSystems</string>
+    <string name="txt_enter_amount_hint">Enter amount</string>
 </resources>
